--- a/templates/header.html
+++ b/templates/header.html
@@ -15,6 +15,7 @@
   
 </head>
 <body>
+  <h1>Today is {{weather}}</h1>
   <a href="/"> Homepage</a>
   <a href="/about"> About Me</a>
   <a href="/contact">Contact</a>
